# megarepo

./: .editorconfig  .envrc  .envrc_secret.secret  .eslintrc.js  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  .sops.yaml  .yamllint.yaml  README.md  devenv.nix  go.mod  go.sum  go.work  go.work.sum  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json
projects/barf/: README.md  common.py  generate_test.py  netbox-dns.py  netbox-macips.py  netbox-switchconfig.py  network.yml  pyproject.toml  requirements.txt  setup.py  tool_generate_configs.py
projects/barf/barf/: __init__.py  __main__.py  common.py
projects/barf/barf/actions/: __init__.py
projects/barf/barf/cli/: __init__.py  common.py  config.py  device.py  generate.py  validate.py
projects/barf/barf/configs/: __init__.py  base.py  fabric.py  firewall.py  interfaces.py  (+4 more)
projects/barf/tests/: conftest.py  test_config_blocks.py  test_config_cli.py  test_device_cli.py  test_device_commands.py  test_firewall.py  test_firmware.py  test_golden_render.py  test_images.py  test_linux_blocks_parity.py  test_linux_render.py  test_linux_vendor.py  test_mikrotik_blocks_parity.py  test_mikrotik_render.py  test_network_load.py  test_progress.py  test_ros_api.py  test_ros_config.py  test_ros_deploy.py  test_ros_settings_ssh.py  test_ros_ssh.py  test_sites.py  test_ssh.py  test_vendor_cleanup.py  test_vendor_update.py  test_vendors.py  test_vyos_api.py  test_vyos_blocks_parity.py  test_vyos_config.py  test_vyos_host.py  test_vyos_render.py  test_vyos_scripts.py  test_wireguard_keys.py
(+1609 files in other folders)
