[project]
name = "barf"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click",
    "napalm",
    "napalm-vyos",
    "hvac",
    "magic-logger",
    "gql",
    "aiohttp",
    "dnspython",
]

[project.scripts]
barf = "barf.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["barf"]
