[project]
name = "barf"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click",
    "napalm",
    "hvac",
    "magic-logger",
    "gql",
    "aiohttp",
    "dnspython",
    "passlib>=1.7.4",
]

[project.scripts]
barf = "barf.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["barf"]

[tool.ruff.lint]
# Defaults (E4, E7, E9, F) stay via extend-select. PLC0415: imports
# belong at the top of the file; import cycles get fixed, not hidden.
extend-select = ["PLC0415"]
